Add fake database. add linting rules.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react-hooks": "1.7.0"
   }
 }
