--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
     "eslint-plugin-react": "^7.17.0",
     "json-server": "^0.15.1",
     "react": "^16.12.0",
