--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "indent": 0,
     "react/jsx-curly-spacing": ["warn", "never"],
     "react/jsx-equals-spacing": ["warn", "never"],
-    "react/jsx-indent": ["warn", "tab"]
+    "react/jsx-indent": ["warn", "tab"],
+    "react/jsx-no-undef": ["warn", "never"]
   }
 }
