--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.0",
+    "axios": "^0.19.0",
     "eslint-plugin-react": "^7.17.0",
     "json-server": "^0.15.1",
     "react": "^16.12.0",
@@ -36,5 +37,6 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react-hooks": "1.7.0"
-  }
+  },
+  "proxy": "http://localhost:3001/"
 }
