--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "react-test-renderer": "^16.12.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "json-server --watch db.json --port 3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server --watch db.json --port 3001"
+    "server": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
