--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-test-renderer": "^16.12.0"
   },
   "scripts": {
-    "start": "json-server --watch db.json --port 3001 && react-scripts start",
+    "start": " json-server  db.json --port 3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
