fix yarn start script. Add dev script to start server and build react app.

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react-test-renderer": "^16.12.0"
   },
   "scripts": {
-    "start": " json-server  db.json --port 3001 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 3001"
+    "server": "json-server --watch db.json --port 3001",
+    "dev": "json-server  db.json --port 3001 & react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +40,5 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react-hooks": "1.7.0"
   },
-  "proxy": "http://localhost:3001/"
+  "proxy": "http://localhost:3001"
 }
